Fix spotbugs issues